Minor edit to the index.html file

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
 
     <h1>P.S.</h1>
-    <h2>P.S. is an applied Probability and Statistics resource used to give you a comprehensive education for all the tools and techniques you will need to use and know to tackle any civil engineering problem.</h2>
+    <h2>P.S. is an applied Probability and Statistics resource to be used as a comprehensive reference to understand and master the concepts and formulas needed to solve civil engineering  problems.</h2>
 
     <div class="divider"></div>
 
