Restructuring the GitHub Repo

--- a/versions_newer_temp/index.html
+++ b/versions_newer_temp/index.html
@@ -134,7 +134,7 @@
 <body>
 
     <h1>P.S.</h1>
-    <h2>P.S. is an applied Probability and Statistics resource to be used as a comprehensive reference to understand and master the concepts and formulas needed to solve civil engineering  problems.</h2>
+    <h2>P.S. is an applied Probability and Statistics resource used to give you a comprehensive education for all the tools and techniques you will need to use and know to tackle any civil engineering problem.</h2>
 
     <div class="divider"></div>
 
@@ -188,6 +188,86 @@
                 <td>x, y, z</td>
                 <td>Number of visits to a website, braking distance of a car</td>
                 <td>Categorical (e.g., gender) or numerical (e.g., diameter)</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Flexural Strength">
+                <td>Flexural Strength</td>
+                <td>A measure of the ability to resist failure in bending.</td>
+                <td>MPa (MegaPascal)</td>
+                <td>Estimating the average value of flexural strength for all beams made using specific methods.</td>
+                <td>Focus on high-performance concrete using superplasticizers and certain binders.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Confidence Interval">
+                <td>Confidence Interval</td>
+                <td>An interval estimate providing a range within which the population parameter is expected to lie with high confidence.</td>
+                <td>N/A</td>
+                <td>Estimating population mean strength.</td>
+                <td>Provides a range of values for the population parameter.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Lower Prediction Bound">
+                <td>Lower Prediction Bound</td>
+                <td>A value providing a lower bound for predicting the value of a single future observation.</td>
+                <td>N/A</td>
+                <td>Predicting the flexural strength of a single beam.</td>
+                <td>Used for individual predictions.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Point Estimation">
+                <td>Point Estimation</td>
+                <td>A single value estimate of a population parameter.</td>
+                <td>N/A</td>
+                <td>Used in inferential statistics to estimate population parameters.</td>
+                <td>Focus on estimating a single value for a population parameter.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Hypothesis Testing">
+                <td>Hypothesis Testing</td>
+                <td>A procedure for testing a claim about a population parameter.</td>
+                <td>N/A</td>
+                <td>Determining if there is enough evidence to reject a null hypothesis.</td>
+                <td>Involves making decisions based on sample data.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Conceptual or Hypothetical Population">
+                <td>Conceptual or Hypothetical Population</td>
+                <td>A population consisting of all possible measurements that might be made under similar experimental conditions.</td>
+                <td>N/A</td>
+                <td>Used in problem situations where questions are fit into the framework of inferential statistics by conceptualizing a population.</td>
+                <td>Focus on potential measurements rather than existing ones.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Deductive Reasoning (Probability)">
+                <td>Deductive Reasoning (Probability)</td>
+                <td>Reasoning from the population to the sample.</td>
+                <td>N/A</td>
+                <td>Used in probability problems where properties of the population are assumed known.</td>
+                <td>Involves making assumptions about the population.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Inductive Reasoning (Inferential Statistics)">
+                <td>Inductive Reasoning (Inferential Statistics)</td>
+                <td>Reasoning from the sample to the population.</td>
+                <td>N/A</td>
+                <td>Used in inferential statistics to draw conclusions about the population based on sample data.</td>
+                <td>Involves drawing conclusions from sample information.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Spatiotemporal Analysis">
+                <td>Spatiotemporal Analysis</td>
+                <td>Analyzing data that has spatial and temporal components.</td>
+                <td>N/A</td>
+                <td>Used in forest health monitoring systems and other applications.</td>
+                <td>Involves both spatial and temporal data.</td>
+                <td>N/A</td>
+            </tr>
+            <tr data-term="Extreme Value Theory">
+                <td>Extreme Value Theory</td>
+                <td>A branch of statistics dealing with the extreme deviations from the median of probability distributions.</td>
+                <td>N/A</td>
+                <td>Modeling extremes related to world records in athletics.</td>
+                <td>Focus on extreme values.</td>
                 <td>N/A</td>
             </tr>
         </tbody>
